--- a/cf/web-ec2-stack.yml
+++ b/cf/web-ec2-stack.yml
@@ -31,11 +31,6 @@ Parameters:
 Resources:
   rEC2Web:
     Type: AWS::EC2::Instance
-    DependsOn: 
-      - rVPC
-      - rPubSubnetSecurityGroup
-      - rPubSubnet
-      - rPubSubnetRouteTableAssociation
     Properties:
       InstanceType: !Ref pInstanceType
       KeyName: !Ref pKeyName
@@ -44,8 +39,8 @@ Resources:
         - AssociatePublicIpAddress: "true"
           DeviceIndex: "0"
           GroupSet: 
-            - !Ref rPubSubnetSecurityGroup
-          SubnetId: !Ref rPubSubnet
+            - !Ref pPubSubnetSecurityGroup
+          SubnetId: !Ref pPubSubnet
       UserData:
         Fn::Base64:                               
           !Sub |
