--- a/group_vars/webs/public.yml
+++ b/group_vars/webs/public.yml
@@ -3,3 +3,7 @@ apache_version: '2.4.6'
 
 wordpress_version: '4.9.6'
 wordpress_install_src_dir: '/opt/source/wordpress'
+
+wordpress_user: 'wordpress'
+wordpress_group: 'wordpress'
+
