--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -1,8 +1,9 @@
 ---
+  - include: os_configure.yml
+    tags:
+       - install
+       
   - include: install.yml
     tags:
        - install
 
-  - include: configure.yml
-    tags:
-       - install
