--- a/group_vars/all/global.yml
+++ b/group_vars/all/global.yml
@@ -1,6 +1,8 @@
 ---
   # these varaibles are shared among diff hosts and roles
 
+apache_user: 'apache'
+
 web_doc_root_dir: '/var/www/html'
 
 wordpress_user: 'wordpress'
