--- a/roles/wordpress/tasks/install.yml
+++ b/roles/wordpress/tasks/install.yml
@@ -1,1 +1,26 @@
 
+---
+
+- name: download WordPress
+  get_url:
+    url: "https://wordpress.org/wordpress-{{ wordpress_version }}.tar.gz"
+    dest: "{{ wordpress_install_src_dir }}/wordpress-{{ wordpress_version }}.tar.gz"
+
+
+- name: unpack WordPress
+  unarchive:
+    src: "{{ wordpress_install_src_dir }}/wordpress-{{ wordpress_version }}.tar.gz"
+    dest: "{{ wordpress_install_src_dir }}"
+    remote_src: yes
+
+- name: copy WordPress to {{ web_doc_root_dir }}
+  shell: "rsync -avP {{ wordpress_install_src_dir }}/wordpress/ {{ web_doc_root_dir }}/"
+  
+- name: mkdir directory for uploads
+  file:
+    path: "{{ web_doc_root_dir }}/web-content/uploads"
+    state: directory
+    owner: "{{ apache_user }}"
+    group: "{{ apache_group }}"
+    mode: 0775
+  
