--- a/roles/mariadb/tasks/configure_wp.yml
+++ b/roles/mariadb/tasks/configure_wp.yml
@@ -1,28 +1,81 @@
 ---
+- name: start MariaDB
+  service:
+    name: mariadb
+    state: restarted
+    enabled: yes
+  become: yes
+  become_user: root
+
+- name: check for existing MariaDB configuration
+  stat:
+    path: /etc/my.cnf.d/wp.cnf
+  register: my_cnf
+
+- name: set MariaDB root password
+  mysql_user:
+    name: root
+    password: "{{ root_db_pass }}"
+    login_user: root
+    login_password: "{{ root_db_pass }}"
+  when: my_cnf.stat.exists == False
+  become: yes
+  become_user: root
+
+- name: create MariaDB configuration
+  template:
+    src: wp.cnf.j2
+    dest: /etc/my.cnf.d/wp.cnf
+    mode: 0644
+  become: yes
+  become_user: root
+
+#- name: set MariaDB root password
+#  mysql_user:
+#    name: root
+#    password: "{{ root_db_pass }}"
 
 - name: Create WordPress database
   mysql_db: 
     name: "{{ wp_db_name }}"
     state: present    
+    login_user: root
+    login_password: "{{ root_db_pass }}"
     
 - name: Create WordPress database user
   mysql_user: 
     name: "{{ wp_db_user }}" 
-    password={{ wp_db_password }} 
-    priv: {{ wp_db_name }}.*:ALL 
-    host_all:yes 
+    password: "{{ wp_db_password }}" 
+    priv: "{{ wp_db_name }}.*:ALL" 
+    host: localhost 
     state: present
+    login_user: root
+    login_password: "{{ root_db_pass }}"
+
+- name: Create WordPress database user
+  mysql_user: 
+    name: "{{ wp_db_user }}" 
+    password: "{{ wp_db_password }}" 
+    priv: "{{ wp_db_name }}.*:ALL" 
+    host: 127.0.0.1 
+    state: present
+    login_user: root
+    login_password: "{{ root_db_pass }}"
 
 - name: Change ownership of WordPress installation
   file: 
-    path="{{ web_doc_root_dir }}"
-    owner=apache 
-    group=apache
-    state=directory 
-    recurse=yes 
-    setype=httpd_sys_content_t
+    path: "{{ web_doc_root_dir }}"
+    owner: apache 
+    group: apache
+    state: directory 
+    recurse: yes 
+    setype: httpd_sys_content_t
+  become: yes
+  become_user: root
 
 - name: restart mariadb Service
   service: 
-    name=mariadb 
-    state=restarted 
+    name: mariadb 
+    state: restarted 
+  become: yes
+  become_user: root
