--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
        
-- include: install.yml
-    tags:
-       - install
+- import_tasks: install.yml
+  tags:
+    - install
 
-- include: configure_wp.yml
-    tags:
-       - install
+- import_tasks: configure_wp.yml
+  tags:
+    - install
