--- a/roles/mariadb/tasks/install.yml
+++ b/roles/mariadb/tasks/install.yml
@@ -17,3 +17,10 @@
   become: yes
   become_user: root
 
+- name: start MariaDB
+  service:
+    name: mariadb
+    state: started
+    enabled: yes
+  become: yes
+  become_user: root
