--- a/roles/mariadb/tasks/configure_wp.yml
+++ b/roles/mariadb/tasks/configure_wp.yml
@@ -27,7 +27,7 @@
     name: "{{ wp_db_user }}" 
     password: "{{ wp_db_password }}" 
     priv: "{{ wp_db_name }}.*:ALL" 
-    host: 127.0.0.1 
+    host: "{{  web_server_ip }}" 
     state: present
     login_user: root
     login_password: "{{ root_db_pass }}"
