--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -8,3 +8,11 @@
     - php
     - php-mysql
     - php-gd
+
+- name: start httpd
+  service:
+    name: httpd
+    state: restarted
+    enabled: yes
+  become: yes
+  become_user: root
