--- a/group_vars/all/global.yml
+++ b/group_vars/all/global.yml
@@ -6,7 +6,5 @@ web_doc_root_dir: '/var/www/html'
 apache_user: 'apache'
 apache_group: 'apache'
 
-wordpress_user: 'wordpress'
-wordpress_group: 'wordpress'
-
-
+wp_db_name: 'wordpress'
+wp_db_user: 'wordpress' 
