--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -4,9 +4,13 @@
   yum: 
     name: "httpd-{{ apache_version }}"
     state: present
+  become: yes
+  become_user: root
     
 - name: Enable service httpd, and set to the running state
   service:
     name: httpd
     enabled: yes
     state: started
+  become: yes
+  become_user: root
