--- a/cf/web-ec2-stack.yml
+++ b/cf/web-ec2-stack.yml
@@ -22,6 +22,10 @@ Parameters:
     Description: the security grouip of the subnet
     Type: AWS::EC2::SecurityGroup::Id 
 
+  pBackServerIp:
+    Description: The IP of the backend server or LB
+    Type: String 
+
 
 Resources:
   rEC2Web:
@@ -40,12 +44,13 @@ Resources:
         Fn::Base64:                               
           !Sub |
             #!/bin/bash -ex
-            yum install -y httpd;
-            echo "<html>YAML CloudFormation is neat!</html>" > /var/www/html/index.html;
-            cd /var/www/html;
-            chmod 755 index.html;
-            service httpd start;
-            chkconfig httpd on;
+              yum-config-manager --enable epel
+              #yum update -y 
+              yum install ansible -y
+              yum install git -y
+              git clone https://github.com/kknd22/cloudformation-sample.git
+              cd cloudformation-sample
+              ansible-playbook -i webs.ini playbook-web.yml --extra-vars "db_server_ip=${pBackServerIp}"
 Outputs:
   oWebURL:
     Description: Newly created web home URL      
@@ -55,3 +60,6 @@ Outputs:
         - !GetAtt 
           - rEC2Web
           - PublicIp
+
+
+
