--- a/roles/mariadb/tasks/configure_wp.yml
+++ b/roles/mariadb/tasks/configure_wp.yml
@@ -1,11 +1,11 @@
 ---
 
 # TBD: ansible mysql module has issue to set the root password, this is the temp workaroud
-#- name: set MariaDB root password 
+#- name: set mysql root password 
 #  shell: mysql -u root -e "UPDATE mysql.user SET Password=PASSWORD('{{ root_db_pass }}') WHERE User='root';"
 #  ignore_errors: yes
 
-- name: set MariaDB root password 
+- name: set mysql root password 
   shell: mysqladmin -u root password {{ root_db_pass }}
   ignore_errors: yes
 
@@ -37,9 +37,9 @@
     login_user: root
     login_password: "{{ root_db_pass }}"
 
-- name: restart mariadb Service
+- name: restart mysql Service
   service: 
-    name: mariadb 
+    name: mysqld 
     state: restarted 
   become: yes
   become_user: root
