--- a/roles/mariadb/tasks/install.yml
+++ b/roles/mariadb/tasks/install.yml
@@ -14,7 +14,7 @@
 
 - name: install MySQL-python
   yum: 
-    name: MySQL-python
+    name: MySQL-python27
     state: present
   become: yes
   become_user: root
