--- a/cf/db-ec2-stack.yml
+++ b/cf/db-ec2-stack.yml
@@ -2,7 +2,8 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Database EC2 instance attached with subnet and security group
 
-Parameters: 
+Parameters:
+  
   pKeyName:
     Description: Name of an existing EC2 KeyPair to enable SSH access to the gettance
     Type: AWS::EC2::KeyPair::KeyName
@@ -28,7 +29,7 @@ Resources:
     Properties:
       InstanceType: !Ref pInstanceType
       KeyName: !Ref pKeyName
-      ImageId: ami-97785bed
+      ImageId: ami-14c5486b
       SubnetId: !Ref pSubnet
       SecurityGroupIds: 
         - !Ref pSecurityGroup
@@ -36,18 +37,13 @@ Resources:
         Fn::Base64:                               
           !Sub |
             #!/bin/bash -ex
+              sleep 90
               yum-config-manager --enable epel
               
-              echo "[mariadb]" > /etc/yum.repos.d/MariaDB.repo
-              echo "name = MariaDB" >> /etc/yum.repos.d/MariaDB.repo
-              echo "baseurl = http://yum.mariadb.org/5.5/rhel7-amd64" >> /etc/yum.repos.d/MariaDB.repo
-              echo "gpgkey=https://yum.mariadb.org/RPM-GPG-KEY-MariaDB"  >> /etc/yum.repos.d/MariaDB.repo
-              echo "gpgcheck=1" >> /etc/yum.repos.d/MariaDB.repo
-
               yum update -y 
               yum install ansible -y
               yum install git -y
-           
+              
               git clone https://github.com/kknd22/cloudformation-sample.git 
               cd cloudformation-sample
               ansible-playbook -i dbs.ini playbook-db.yml
